using javassist for byte code modification