@@ -14,6 +14,7 @@
     <skipTests>false</skipTests>
     <commons-lang3.version>3.11</commons-lang3.version>
     <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+    <javaassist.version>3.28.0-GA</javaassist.version>
 </properties>
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
@@ -47,6 +48,9 @@
         <version>3.0.0-M5</version>
         <configuration>
           <skipTests>${skipTests}</skipTests>
+          <argLine>
+            --add-opens java.base/java.lang=ALL-UNNAMED
+          </argLine>
         </configuration>
 	  </plugin>
 	  <plugin>
@@ -63,7 +67,7 @@
 	<dependency>
 		<groupId>org.projectlombok</groupId>
 		<artifactId>lombok</artifactId>
-		<version>1.18.20</version>
+		<version>1.18.22</version>
 		<scope>provided</scope>
 	</dependency>
 	<dependency>
@@ -125,6 +129,12 @@
 	    <groupId>org.opentest4j</groupId>
 	    <artifactId>opentest4j</artifactId>
 	    <version>1.2.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.javassist</groupId>
+	    <artifactId>javassist</artifactId>
+	    <version>${javaassist.version}</version>
+	    <scope>test</scope>
 	</dependency>
 </dependencies>
 </project>
